WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 65072
REGRESSION (Safari 5.0.5 - 5.1): No animation on svg-wow.org/text-effects/text-effects.xhtml
https://bugs.webkit.org/show_bug.cgi?id=65072
Summary
REGRESSION (Safari 5.0.5 - 5.1): No animation on svg-wow.org/text-effects/tex...
Dirk Schulze
Reported
2011-07-24 03:05:33 PDT
I couldn't check the problem on the test yet. I'll check it later. Just opening the bug so that I don't forget it. The test definitely works on Safari 5.0
Attachments
Patch
(55.34 KB, patch)
2012-02-15 03:34 PST
,
Nikolas Zimmermann
zherczeg
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2012-02-13 07:09:34 PST
An exception is thrown, NOT_SUPPORTED_ERR here "result = attrVal.baseVal.getItem(0).value;" in node-svg-debug.js, line 107. I debugged using inspector and found it that this example queries a SVGTextElement grabbings its y.baseVal, which is a SVGLengthList, and calls getItem(0) to get the SVGLength object, and then value() to get a float. As it throws an exception on SVGLength.value, SVGLength couldn't resolve the unit. Quick debugging shows that: alert(this._node.getAttribute("y")); indeed returns "-0.5em". this._node has no renderer, at the point where the script tries to query the SVG DOM, that's why it can't resolve ems/exs/percentage units. Maybe we shouldn't throw though, I'll investigate.
Nikolas Zimmermann
Comment 2
2012-02-13 08:13:10 PST
I have a fix for this, will tidy it up tomorrow.
Nikolas Zimmermann
Comment 3
2012-02-15 03:34:40 PST
Created
attachment 127151
[details]
Patch
Zoltan Herczeg
Comment 4
2012-02-15 07:48:55 PST
Comment on
attachment 127151
[details]
Patch r=me
Nikolas Zimmermann
Comment 5
2012-02-16 04:59:08 PST
Committed
r107923
: <
http://trac.webkit.org/changeset/107923
>
Stephen Chenney
Comment 6
2012-04-03 08:55:25 PDT
Committed
r113043
: <
http://trac.webkit.org/changeset/113043
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug