REGRESSION (Safari 5.0.5 - 5.1): No animation on svg-wow.org/text-effects/text-effects.xhtml https://bugs.webkit.org/show_bug.cgi?id=65072

Reviewed by Zoltan Herczeg.

Source/WebCore:

Fix EMS/EXS length resolving, when the target context has no renderer, eg.
<text display="none" dy="1em">ABC</text>, myText.dy.baseVal.getItem(0).value()
currently throws, even if <text> has a parent, we could use to resolve the length.

Always fall-back to parent context, to resolve EMS/EXS units, instead of ignoring it.
The current behaviour stays the same, if the target element is not in the document,
then we really can't resolve lengths like this.

Tests: svg/text/ems-display-none.svg
       svg/text/exs-display-none.svg

* svg/SVGLengthContext.cpp:
(WebCore::renderStyleForLengthResolving):
(WebCore::SVGLengthContext::convertValueFromUserUnitsToEMS):
(WebCore::SVGLengthContext::convertValueFromEMSToUserUnits):
(WebCore::SVGLengthContext::convertValueFromUserUnitsToEXS):
(WebCore::SVGLengthContext::convertValueFromEXSToUserUnits):

LayoutTests:

* platform/chromium/test_expectations.txt:
* platform/mac/svg/text/ems-display-none-expected.png: Added.
* platform/mac/svg/text/ems-display-none-expected.txt: Added.
* platform/mac/svg/text/exs-display-none-expected.png: Added.
* platform/mac/svg/text/exs-display-none-expected.txt: Added.
* svg/text/ems-display-none.svg: Added.
* svg/text/exs-display-none.svg: Added.

Canonical link: https://commits.webkit.org/95759@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107923 268f45cc-cd09-0410-ab3c-d52691b4dbfc